--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.application'
 android
 {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '26.0.0'
 
     dexOptions
     {
@@ -57,12 +57,18 @@ android
     }
 }
 
+ext
+{
+    support = '25.4.0'
+    firebase = '11.0.0'
+}
+
 dependencies
 {
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile "com.android.support:support-v4:$support"
+    compile "com.android.support:appcompat-v7:$support"
+    compile "com.android.support:design:$support"
 
-    compile 'com.google.firebase:firebase-core:10.2.1'
-    compile 'com.google.firebase:firebase-crash:10.2.1'
+    compile "com.google.firebase:firebase-core:$firebase"
+    compile "com.google.firebase:firebase-crash:$firebase"
 }
