--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript
 
     dependencies
     {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
@@ -16,6 +16,15 @@ allprojects
 {
     repositories
     {
+        maven
+        {
+            url "https://maven.google.com"
+        }
+
         jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
